2002-05-03  Joseph I. Valenzuela  <jvalenzu@forbidden.loungenet.org>

	* /openal/linux/src/arch/alsa/alsa.h
	* /openal/linux/src/arch/alsa/alsa.c
	Updated alsa backend to match current trend in apis

	* /openal/linux/src/configure.in
	Updated alsa test

2001-01-26  Joseph I. Valenzuela  <tsaotsao@xanadu.lokigames.com>

	* /openal/linux/audioconvert/ac_helper.c
	* /openal/linux/src/al_config.c
	* /openal/linux/src/al_error.c
	* /openal/linux/src/al_mixer.c
	* /openal/linux/src/al_mixfunc.c
	* /openal/linux/src/al_mixmanager.c
	* /openal/linux/src/al_queue.c
	* /openal/linux/src/al_rctree.c
	* /openal/linux/src/al_rcvar.c
	* /openal/linux/src/al_rcvar.h
	* /openal/linux/src/al_source.c
	* /openal/linux/src/al_state.c
	* /openal/linux/src/Attic/al_vector.c
	* /openal/linux/src/mixaudio16.c
	* /openal/linux/src/alc/alc_context.c
	* /openal/linux/src/alc/alc_context.h
	* /openal/linux/src/alc/Attic/alc_device.c
	* /openal/linux/src/alc/alc_error.c
	* /openal/linux/src/alc/alc_speaker.c
	* /openal/linux/src/alut/alut_imaadpcm.c
	* /openal/linux/src/extensions/al_ext_capture.h
	* /openal/linux/src/extensions/al_ext_loki.h
	* /openal/linux/src/extensions/al_ext_mp3.h
	* /openal/linux/src/extensions/al_ext_needed.h
	* /openal/linux/src/extensions/al_ext_vorbis.h
	* /openal/linux/test/testtime.c

	Comments, mostly, small changes in filter order to audioconvert


2001-01-25  Joseph I. Valenzuela  <tsaotsao@xanadu.lokigames.com>
	* /openal/linux/configure.in
	Simplified vorbis test.
	
	* /openal/linux/src/Makefile.in
	Added al_mspool.c.

	* /openal/linux/src/al_able.c
	* /openal/linux/src/al_bpool.c
	* /openal/linux/src/al_buffer.c
	* /openal/linux/src/al_config.c
	* /openal/linux/src/al_debug.c
	* /openal/linux/src/al_distance.c
	* /openal/linux/src/al_doppler.c
	* /openal/linux/src/al_error.c
	* /openal/linux/src/al_ext.c
	* /openal/linux/src/al_filter.c
	* /openal/linux/src/al_listen.c
	* /openal/linux/src/al_main.c
	* /openal/linux/src/al_main.h