@@ -1,3 +1,7 @@
+2002-05-03  Joseph Valenzuela  <jvalenzu@formosa>
+
+	* Darwin updates
+
 2002-05-03  Joseph I. Valenzuela  <jvalenzu@forbidden.loungenet.org>
 
 	* /openal/linux/src/arch/alsa/alsa.h
